- simplify PDP controller code - move principal detection to PEP - update OAS spec for AuthZEN - fix unit tests
