# oas/authzen/openapi.yaml
@@ -3,7 +3,7 @@ openapi: 3.0.0
 info:
   description: |
     OpenAPI specification for AuthZEN spec.
-  version: 1.1.0
+  version: 1.2.0
   title: "AuthZEN"
   contact:
     name: G. Juijn
@@ -15,17 +15,20 @@ servers:
 tags:
   - name: authZEN
     description: AuthZEN specification.
-  - name: policy
-    description: Operations on policies.
+  - name: evaluation
+    description: AuthZEN evaluation endpoints.
+  - name: search
+    description: AuthZEN search endpoints.
 
 paths:
   /evaluation:
     post:
-      operationId: "auth-request"
-      summary: Authorization request.
-      description: Endpoint to evaluate the authorize of a request.
+      operationId: "access-evaluation"
+      summary: Access evaluation request.
+      description: Endpoint to evaluate a single access request.
       tags:
         - authZEN
+        - evaluation
       parameters:
         - name: "Authorization"
           in: header
@@ -47,9 +50,13 @@ paths:
             This does not mean the request is authorized, it means that the request has been processed successfully.
           headers:
             API-Version:
+              description: Full version number of the API.
               schema:
                 type: string
-              description: Full version number of the API.
+            X-Request-ID:
+              description: Returns the X-Request-ID from the request.
+              schema:
+                type: string
           content:
             application/json:
               schema:
@@ -65,186 +72,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/AuthorizationRequest"
 
-  /policies:
-    get:
-      operationId: "get-policies"
-      summary: Retrieve policies.
-      description: Endpoint to retrieve a list of all cached policies.
-      tags:
-        - policy
-      responses:
-        "200":
-          description: Policies found.
-          headers:
-            API-Version:
-              schema:
-                type: string
-              description: Full version number of the API.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PoliciesResponse"
-        "400":
-          $ref: "#/components/responses/BadRequest"
-        "401":
-          $ref: "#/components/responses/NotAuthorized"
-        "403":
-          $ref: "#/components/responses/AccessDenied"
-        "404":
-          $ref: "#/components/responses/NotFound"
-        "5XX":
-          $ref: "#/components/responses/UnexpectedError"
-
-  /policy/{id}:
-    parameters:
-      - $ref: "#/components/parameters/PolicyID"
-
-    get:
-      operationId: "get-policy"
-      summary: Retrieve policy.
-      description: |
-        Endpoint to retrieve a specific cached policy.
-        If the unique identifier of the policy does not exist, a 404 status code will be returned.
-      tags:
-        - policy
-      responses:
-        "200":
-          description: Policy found.
-          headers:
-            API-Version:
-              schema:
-                type: string
-              description: Full version number of the API.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PolicyResponse"
-        "400":
-          $ref: "#/components/responses/BadRequest"
-        "401":
-          $ref: "#/components/responses/NotAuthorized"
-        "403":
-          $ref: "#/components/responses/AccessDenied"
-        "404":
-          $ref: "#/components/responses/NotFound"
-        "5XX":
-          $ref: "#/components/responses/UnexpectedError"
-
-    put:
-      operationId: "add-policy"
-      summary: Add policy.
-      description: |
-        Endpoint to add a new policy to the cache.
-        If the unique identifier of the policy already exists, a 409 status code will be returned.
-      tags:
-        - policy
-      requestBody:
-        description: Definition of the new policy.
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Policy"
-      responses:
-        "201":
-          description: Policy created.
-          headers:
-            API-Version:
-              schema:
-                type: string
-              description: Full version number of the API.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PolicyResponse"
-        "400":
-          $ref: "#/components/responses/BadRequest"
-        "401":
-          $ref: "#/components/responses/NotAuthorized"
-        "403":
-          $ref: "#/components/responses/AccessDenied"
-        "409":
-          $ref: "#/components/responses/AlreadyExists"
-        "5XX":
-          $ref: "#/components/responses/UnexpectedError"
-
-    post:
-      operationId: "replace-policy"
-      summary: Replace policy.
-      description: |
-        Endpoint to replace an existing policy in teh cache.
-        If the unique identifier of the policy does not exist, a 404 status code will be returned.
-      tags:
-        - policy
-      requestBody:
-        description: Definition of the new policy.
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Policy"
-      responses:
-        "200":
-          description: Policy replaced.
-          headers:
-            API-Version:
-              schema:
-                type: string
-              description: Full version number of the API.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PolicyResponse"
-        "400":
-          $ref: "#/components/responses/BadRequest"
-        "401":
-          $ref: "#/components/responses/NotAuthorized"
-        "403":
-          $ref: "#/components/responses/AccessDenied"
-        "404":
-          $ref: "#/components/responses/NotFound"
-        "5XX":
-          $ref: "#/components/responses/UnexpectedError"
-
-    delete:
-      operationId: "delete-policy"
-      summary: Remove policy.
-      description: |
-        Endpoint to remove an existing policy from the cache.
-        If the unique identifier of the policy does not exist, a 404 status code will be returned.
-      tags:
-        - policy
-      responses:
-        "200":
-          description: Policy removed.
-          headers:
-            API-Version:
-              schema:
-                type: string
-              description: Full version number of the API.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PolicyResponse"
-        "400":
-          $ref: "#/components/responses/BadRequest"
-        "401":
-          $ref: "#/components/responses/NotAuthorized"
-        "403":
-          $ref: "#/components/responses/AccessDenied"
-        "404":
-          $ref: "#/components/responses/NotFound"
-        "5XX":
-          $ref: "#/components/responses/UnexpectedError"
-
 components:
-  parameters:
-    PolicyID:
-      in: path
-      name: "id"
-      schema:
-        type: string
-      required: true
-      description: Unique identifier of a policy.
-
   requestBodies:
     AuthorizationRequest:
       content:
@@ -279,28 +107,6 @@ components:
             $ref: "#/components/schemas/ErrorResponse"
     AccessDenied:
       description: The request has failed due to being forbidden.
-      headers:
-        API-Version:
-          schema:
-            type: string
-          description: Full version number of the API.
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/ErrorResponse"
-    NotFound:
-      description: The request has failed due to the resource not existing.
-      headers:
-        API-Version:
-          schema:
-            type: string
-          description: Full version number of the API.
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/ErrorResponse"
-    AlreadyExists:
-      description: The request has failed due to the resource existing.
       headers:
         API-Version:
           schema:
@@ -402,47 +208,9 @@ components:
           type: boolean
           description: true if the request is authorized.
         context:
-          type: object
-          description: Optional context returned by the policy engine.
+          $ref: "#/components/schemas/ReasonObject"
       required:
         - decision
-
-    Policy:
-      type: object
-      description: The content of a policy.
-      properties:
-        id:
-          type: string
-          description: The unique identifier of the policy.
-        source:
-          type: string
-          description: The unique identifier of the source.
-        target:
-          type: string
-          description: The unique identifier of the target.
-        rvvaId:
-          type: string
-          description: The unique identifier of the Register of Activities (RvVA).
-        language:
-          type: string
-          description: The language of the policy.
-          example: "rego"
-        url:
-          type: string
-          description: Link to the actual policy.
-      required:
-        - id
-        - language
-        - url
-
-    PoliciesResponse:
-      description: A set of policies.
-      type: array
-      items:
-        $ref: "#/components/schemas/Policy"
-
-    PolicyResponse:
-      $ref: "#/components/schemas/Policy"
 
     ErrorResponse:
       type: object
